--- a/frontend/src/components/UserProfilePage/UserProfile.css
+++ b/frontend/src/components/UserProfilePage/UserProfile.css
@@ -187,6 +187,17 @@
     width: 100%;
     resize: none;
     display: none;
+    border: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+}
+
+.profile_edit_textarea:focus{
+    outline: none !important;
+    border-color: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 12px;
+    z-index: 99;
 }
 
 .camera{
@@ -195,6 +206,7 @@
 
 .user-profile-select-books{
     display: flex;
+    position: relative;
     color: rgb(255, 255, 255);
     background-color: rgb(88, 17, 100);
     -webkit-box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.25);
@@ -208,16 +220,18 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom: rgb(126, 126, 126) 1px solid;
+    z-index: 99;
        
 }
 
 .choice{
     cursor: pointer;
-    color: bisque;
+    
     
 }
 .choice:hover{
     cursor: pointer;
+    color: bisque;
 
 }
 
@@ -239,7 +253,7 @@
     border-radius: 12px;
     width: 1340px;
     min-width: 1300px;
-    height: 450px;
+    height: 500px;
     margin-left: 100px;
     -webkit-box-shadow: 0 2px 8px -1px rgba(0, 0, 0, 0.983);
     -moz-box-shadow: 0 2px 8px -1px rgb(0, 0, 0);
@@ -249,8 +263,31 @@
 }
 
 .bio-submit-button{
+
    display: none;
+   margin-top: 10px;
+   margin-left: 10px;
+    padding-top: 0px;
+    justify-content: center;
+    width: 90px;
+    height: 30px;
+    border: 1px solid rgb(100, 0, 153);
+    border-radius: 12px;
+    background-color: rgb(102, 0, 157);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    font-size: 14px;
 }
+
+.bio-submit-button:hover{
+    cursor: pointer;
+        background-color: rgb(136, 0, 210);
+        -webkit-box-shadow: 0 2px 8px -1px rgba(0, 0, 0, 0.983);
+        -moz-box-shadow: 0 2px 8px -1px rgb(0, 0, 0);
+        box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.75);
+}
+
+
 
 .books{
     display: flex;
@@ -264,8 +301,8 @@
 }
 
 .books-index-cover-user{
-    width: 400px;
-    height: 300px;
+    width: 350px;
+    height: 400px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -281,23 +318,23 @@
 }
 
 .books-index-spine-user{
-    width: 40px;
-    height: 300px;
+    width: 800px;
+    height: 400px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
     background-image: url('../../assets/croctrxture.jpeg');
     background-size: cover;
-    background-position: 100px 10px;
+    background-position: 160px 10px;
 }
 
 .books-index-text-container-user{
     width: 300px;
     height: 400px;
-    margin-left: 30px;
+    margin-left: 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -345,16 +382,22 @@
 
 .public-container{
     display: none;
+    color: white;
 }
 
 .private-container{
     display: none;
+    color: white
 }
 
 .not-found{
    
 }
 
-.choice:visited{
-   color: white;
+.choice:active{
+   color: none;
+}
+
+element.style{
+
 }
