--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,27 @@
 /* TODO Add site wide styles */
-.html {
+/* .html {
     width: 100%;
     height: 100%;
     position: relative;
+} */
+
+.html,
+.body {
+    width: 100%;
+    height: 100%;
+}
+
+#header {
+    position: fixed;
+    width: 100%;
+    height: 70px;
+    top: 0;
+}
+
+#container {
+    width: 100%;
+    position: fixed;
+    top: 70px;
+    bottom: 40px;
+    overflow: auto;
 }
